# socket

./: CMakeLists.txt
lib/client/: client.hpp
lib/logger/: logger.hpp
lib/server/: server.hpp
lib/socket/: socket.hpp
lib/utils/: utils.hpp
python/: tcp_client.py
src/: CMakeLists.txt
src/client/: CMakeLists.txt  client.cpp
src/logger/: CMakeLists.txt  logger.cpp
src/server/: CMakeLists.txt  server.cpp
src/socket/: CMakeLists.txt  socket.cpp
src/utils/: CMakeLists.txt  utils.cpp
